--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "availity-reactstrap-validation": "^2.6.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "email-validator": "^2.0.4",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
+    "react": "^16.10.2",
     "react-dates": "^21.2.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.10.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-social-login-buttons": "^3.0.0",
     "react_ujs": "^2.6.0",
     "reactstrap": "^8.0.1",
     "turbolinks": "^5.2.0"
